# OpenGL

./: .gitignore  OpenGL.sln  meson.build
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters
OpenGL/res/shaders/: basic.shader
OpenGL/src/: GLMacros.cpp  GLMacros.h  IndexBuffer.cpp  IndexBuffer.h  Main.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
res/shaders/: basic.glsl  basic.shader  textured.shader
src/app/: main.cc  meson.build
src/lib/: meson.build
src/lib/glapi/: GLMacros.cc  GLMacros.h  IndexBuffer.cc  IndexBuffer.h  Renderer.cc  Renderer.h  Shader.cc  Shader.h  Texture.cc  Texture.h  VertexArray.cc  VertexArray.h  VertexBuffer.cc  VertexBuffer.h  get.sh  meson.build
src/lib/stb_image/: meson.build  stb_image.h
src/lib/utils/: meson.build  once_array.h  watcher.h
